# voxl3r

./: .gitignore  .gitmodules  TODO.md  dataset.py  debug_script.py  pyproject.toml  remove_unneccessary_voxelgrids.py  run_training.sh  surface_net.ipynb  test.py  test_lmdb.py  test_pipeline.py  test_wids.ipynb  train.py
baseline/: execute-mast3r.py  mast3r_pipeline.py
config/data/: base.yaml  images.yaml  images_transform.yaml  images_transform_batched.yaml  mast3r.yaml  mast3r_scenes.yaml  mast3r_transform.yaml  mast3r_transform_batched.yaml  undistored_scenes.yaml  undistorted_scenes.yaml
config/module/: base.yaml
config/network/: aux_network.yaml  base_unet.yaml  point_transformer.yaml  unet3D.yaml
config/trainer/: base.yaml  tune.yaml
config/tune/: base.yaml
data/: dslr_undistort_config.yml
datasets/: __init__.py  scene.py  scene_image_pairs.py  scene_processed.py
datasets/chunk/: __init__.py  base.py  grid_interpolation.py  image.py  image_batched.py  image_heuristics.py  image_loader.py  image_loader_compressed.py  image_loader_lmdb.py  lmdb_demo.py  mast3r.py  mast3r_blosc2.py  mast3r_lmdb.py  mast3r_main.py  occupancy.py  occupancy_revised.py  pair_matching.py  plot_angle_heuristic.py  zip.py
datasets/transforms/: __init__.py  images.py  mirror.py  pairing.py  pe.py  point_based.py  point_transform.py  projection.py  sample_coordinate_grid.py  sample_occ_grid.py  shuffle.py  smear_images.py
datasets/transforms_batched/: __init__.py  projection_batched.py  sample_occ_grid.py  smear.py
demos/: mast3r_3d.ipynb  surface_net.ipynb  surface_net_3d.ipynb
desc/: chunks.b2frame
experiments/: 01_skip_connections.py  02_proxy_loss.py  03_resolution.py  04_shuffle_on_off.py  05_used_blocks.py  05_used_blocks_2.py  05_used_blocks_3_keep_dim.py  05_used_blocks_4_keep_dim_direct_comparison.py  05_used_blocks_4_keep_dim_direct_comparison_w_shuffle.py  06_comparison_architecture.py  07_weight_decay.py  08_transformer_no_refinement.py  09_comparison_data_loading.py  chunk_dataset.py  image_chunk_dataset.py  mast3r.py  mast3r_chunk_dataset.py  motion.py  occ_chunk_dataset.py  volume_creation.py
experiments/01_sc/: 2024-12-16_22-30-47.pth
experiments/02_proxy/: 2024-12-17_17-17-09.pth  2024-12-17_17-18-06.pth  2024-12-18_03-25-39.pth
experiments/05_used_blocks/: 2024-12-28_04-55-40.pth  2024-12-28_16-36-42.pth  2025-01-10_14-11-46.pth
experiments/05_used_blocks_3_keep_dim/: 2024-12-29_10-13-07.pth
experiments/05_used_blocks_4_keep_dim_direct_comparison/: 2024-12-30_14-36-29.pth
experiments/05_used_blocks_4_keep_dim_direct_comparison_w_shuffle/: 2025-01-01_13-12-22.pth
experiments/05_used_blocks_refinement_2/: 2024-12-29_01-05-49.pth
experiments/06_comparison_architecture/: 2025-01-04_19-15-11.pth
experiments/07_weight_decay/: 2025-01-04_22-59-58.pth  2025-01-05_09-39-33.pth
experiments/08_transformer_no_refinement/: 2025-01-07_01-59-41.pth  2025-01-07_08-18-49.pth
experiments/mast3r_3d/: data.py  train.py
experiments/mast3r_baseline/: data.py  eval.py  module.py
experiments/surface_net_3d/: data.py  logger.py  model.py  projection.py  run.py  train.py  visualize.py
experiments/surface_net_baseline/: module.py  train.py
models/: mast3r.py  occ_chunk_dataset.py  volume_creation.py  voxel.py
models/mast3r_baseline/: data.py  eval.py  module.py
models/surface_net_3d/: data.py  logger.py  model.py  projection.py  run.py  train.py  visualize.py
models/surface_net_baseline/: data.py  model.py  module.py  train.py  util.py
networks/: aggregator_net.py  aggregator_net_with_downsampling.py  attention_net.py  mast3r_module.py  patch_2_pixels.py  point_transformer.py  smear_module.py  smear_unprojection.py  surfacenet.py  surfacenet_with_attention.py  surfacenet_with_downscaling.py  u_net.py  volume_transformer.py  voxel_based.py  voxl3r.py
profiler_logs/: fit-perf_logs.txt  fit-perf_logs_new.txt  logs.txt
surface_net_baseline/: train.py  util.py
training/: bce_weighted.py  common.py  eval.py  f1_loss.py  scene_visualization copy.py  scene_visualization.py  scene_visualization_fine.py  scene_visualization_subsampling.py  test.py  tune.py  tune_ray_deprecated_because_not_working.py
training/default/: aux_module.py  data.py  module.py
training/loggers/: occ_grid.py
training/mast3r/: module_point_transformer.py  module_transformer_unet3D.py  module_unet3d.py  module_voxel_based.py  train.py  train_aggregator.py  train_aggregator_with_surfacenet.py  train_attention.py  train_point_transformer.py  train_pretrained_surfacenet.py  train_rgb.py  train_transformer.py
training/tuner/: __init__.py
training/voxl3r/: module.py
utils/: basic.py  chunking.py  config.py  config.yaml  config.yaml.template  data_parsing.py  masking.py  transformations.py  visualize.py
visualization/: __init__.py  base.py  images.py  mast3r.py  mesh.py  occ.py  smeared_images.py
