[tool.poetry]
name = "voxl3r"
version = "0.1.0"
description = ""
authors = ["go98zoh <go98zoh@mytum.de>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
#torch = { path = "torch-2.1.2+rocm6.0-cp310-cp310-linux_x86_64.whl" }
#torchvision = { path = "torchvision-0.16.1+rocm6.0-cp310-cp310-linux_x86_64.whl" }
#torch = "^2.5.1"
#torchvision = "^0.20.1"
opencv-python = "^4.10.0.84"
matplotlib = "^3.9.2"
scipy = "^1.14.1"
pandas = "^2.2.3"
trimesh = "^4.5.1"
pyvista = "^0.44.1"
pyyaml = "^6.0.2"
munch = "^4.0.0"
imageio = "^2.36.0"
lz4 = "^4.3.3"
tqdm = "^4.66.6"
numpy = "^2.1.2"
pillow = "^11.0.0"
torchmetrics = "1.2.0"
rtree = "^1.3.0"
libigl = "^2.5.1"
shapely = "^2.0.6"
torch = { version = "^2.5.1+rocm6.2", source = "pytorch-gpu-src" }
torchvision = { version = "^0.20.1+rocm6.2", source = "pytorch-gpu-src" }
torchaudio = { version = "^2.5.1+rocm6.2", source = "pytorch-gpu-src" }
pysdf = "^0.1.9"
einops = "^0.8.0"


[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/rocm6.2"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
