[project]
name = "voxl3r"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "pytorch-triton-rocm>=2.1.0; platform_system == 'Linux'",
    "anyio==4.7.0",
    "blinker==1.9.0",
    "certifi==2024.8.30",
    "dep-logic==0.4.9",
    "distlib==0.3.9",
    "filelock==3.16.1",
    "findpython==0.6.2",
    "h11==0.14.0",
    "hishel==0.1.1",
    "httpcore==1.0.7",
    "httpx[socks]==0.28.1",
    "idna==3.10",
    "installer==0.7.0",
    "markdown-it-py==3.0.0",
    "mdurl==0.1.2",
    "msgpack==1.1.0",
    "packaging==24.2",
    "pbs-installer==2024.10.16",
    "pdm==2.22.0",
    "platformdirs==4.3.6",
    "pygments==2.18.0",
    "pyproject-hooks==1.2.0",
    "python-dotenv==1.0.1",
    "resolvelib==1.1.0",
    "rich==13.9.4",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "socksio==1.0.0",
    "tomlkit==0.13.2",
    "truststore==0.10.0 ; python_full_version >= '3.10'",
    "typing-extensions==4.12.2 ; python_full_version < '3.13'",
    "unearth==0.17.2",
    "virtualenv==20.28.0",
    "loguru>=0.7.3",
    "tqdm>=4.67.1",
    "pandas>=2.2.3",
    "pydantic==2.5.3",
    "pyyaml>=6.0.2",
    "pyvista[all]>=0.44.2",
    "trimesh[embreex]>=4.5.3",
    "scannetpp",
    "setuptools>=75.6.0",
    "jaxtyping>=0.2.36",
    "scipy>=1.14.1",
    "munch>=4.0.0",
    "split>=0.4",
    "imageio>=2.36.1",
    "numpy>=2.2.0",
    "lz4>=4.3.3",
    "opencv-python>=4.10.0.84",
    "pillow>=11.0.0",
    "open3d>=0.18.0",
    "einops>=0.8.0",
    "lightning>=2.4.0",
    "mast3r",
    "scikit-learn>=1.6.0",
    "roma>=1.5.1",
    "gradio>=5.8.0",
    "matplotlib>=3.9.3",
    "tensorboard>=2.18.0",
    "pyglet<2",
    "huggingface-hub[torch]>=0.22",
    "beartype>=0.19.0",
    "positional-encodings>=6.0.3",
    "trame-vtk>=2.8.12",
    "trame>=3.7.1",
    "shapely>=2.0.6",
    "rtree>=1.3.0",
    "scikit-image>=0.24.0",
    "wandb<0.19",
    "pydantic2-argparse>=0.9.2",
    "vit-pytorch>=1.9.0",
    "mpld3>=0.5.10",
    "webdataset>=0.2.100",
    "ipykernel>=6.29.5",
    "lmdb>=1.6.2",
    "memray>=1.15.0",
    "zfpy>=1.0.1",
    "blosc2==3",
    "embreex>=2.17.7.post6",
]

[tool.uv.sources]
torch = [{ index = "pytorch-rocm", marker = "platform_system == 'Linux'" }]
torchvision = [
    { index = "pytorch-rocm", marker = "platform_system == 'Linux'" },
]
pytorch-triton-rocm = [
    { index = "pytorch-rocm", marker = "platform_system == 'Linux'" },
]
mast3r = { path = "extern/mast3r", editable = true }
scannetpp = { path = "extern/scannetpp", editable = true }

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.2.4"
explicit = true
